--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 # Copy this file to .env and fill in your OpenAI credentials
-OPENAI_API_KEY=
-OPENAI_MODEL=gpt-3.5-turbo
+API_KEY=
+MODEL_NAME=gpt-3.5-turbo
