Add Quarkus MCP server

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.main.banner-mode=off
 # No database configuration is required
+
+# MCP server configuration
+quarkus.mcp-server-stdio.enabled=true
+quarkus.mcp-server-stdio.log-requests=true
+quarkus.mcp-server-stdio.log-responses=true
