--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.main.banner-mode=off
 quarkus.mcp-server-stdio.enabled=true
 quarkus.mcp-server-stdio.log-requests=true
 quarkus.mcp-server-stdio.log-responses=true
+
+quarkus.package.uber-jar=true
+
