--- a/pom.xml
+++ b/pom.xml
@@ -61,8 +61,9 @@
             <version>1.1.0</version>
         </dependency>
         <dependency>
-            <groupId>io.quarkus</groupId>
+            <groupId>io.quarkiverse.mcp</groupId>
             <artifactId>quarkus-mcp-server-stdio</artifactId>
+            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
